--- a/src/html/game.html
+++ b/src/html/game.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/src/css/style.css">
-  <script src="/src/js/game.js" type="module" defer async></script>
+  <link rel="stylesheet" href="/src/css/game.css">
+  <script src="/src/socket/socket.js" type="module" defer async></script>
 
   <title>Chess</title>
 </head>
