--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,11 +24,11 @@
 
     <main>
 
-        <form action="/game" method="GET">
+        <form action="/game?local=true" method="GET">
             <button id="playLocal" class="btnPlay">PLAY LOCAL</button>
         </form>
 
-        <form action="">
+        <form action="/game?local=false">
             <button id="playOnline" class="btnPlay">PLAY ONLINE</button>
         </form>
 
