--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,7 +24,7 @@
 
     <main>
 
-        <form action="/game?local=true" method="GET">
+        <form action="/game" method="GET">
             <button id="playLocal" class="btnPlay">PLAY LOCAL</button>
         </form>
 
