--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,8 +16,8 @@
     <header class="w-100">
         <nav>
             <ul>
-                <li>Créer un compte</li>
-                <li>Se connecter</li>
+                <li><a href="/sign">Créer un compte</a></li>
+                <li><a href="/login">Se connecter</a></li>
             </ul>
         </nav>
     </header>
